test: added integration tests - used testcontainers - separated audit config for controller test